other/m-q/mutate-large-termination-gps/pod-not-patched01.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  terminationGracePeriodSeconds: 50
